# testcaseFTP

./: .env  Cargo.toml  Dockerfile
.github/workflows/: push-and-build.yml
configuration/: base.yml
src/: configuration.rs  main.rs  state.rs
src/routes/: files.rs  mod.rs
