[package]
name = "testcaseFTP"
version = "0.1.0"
edition = "2021"

[dependencies]
libunftp = "0.20.1"
unftp-sbe-fs = "0.2.5"
tokio = { version = "1", features = ["full"] }
config = "0.14.0"
serde = "1.0.203"
dotenvy = "0.15.7"
anyhow = "1.0.86"
axum = { version = "0.7.7", features = ["multipart"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-macros = "0.4.2"
tokio-util = { version = "0.7.12", features = ["compat", "io"] }
futures = "0.3.31"
